<?xml version="1.0"?>
<package format="2">
  <name>ros_canbus</name>
  <version>0.0.1</version>
  <description>The version adapted for use in ROS2 of the ROCK canbus package</description>

  <maintainer email="amanda10122020@gmail.com">diogo</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros_driver_base</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
