<?xml version="1.0"?>
<package format="2">
  <name>thruster_enitech_driver</name>
  <version>0.0.1</version>
  <description>The thruster_enitech_driver package in ROS2 Humble</description>

  <maintainer email="amanda10122020@gmail.com">Amanda Nascimento</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>ros_driver_base</depend>
  <depend>ros_canbus</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
