<?xml version="1.0"?>
<package format="3">
  <name>thruster_enitech_node</name>
  <version>0.0.1</version>
  <description>The thruster_enitech_node package</description>
  <maintainer email="amanda10122020@gmail.com">Amanda Nascimento</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros_canbus</depend>
  <depend>builtin_interfaces</depend>
  <depend>thruster_enitech_node_msgs</depend>
  <depend>yaml-cpp</depend>
  
  <doc_depend>doxygen</doc_depend>
  <depend>thruster_enitech_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
